fixed scrollbar in chat

--- a/style.css
+++ b/style.css
@@ -177,10 +177,14 @@ body {
     background-position: center;
     border-top: 4px solid #f5d100;
     padding: 6px 40px;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
     color: white;
     font-family: Arial;
 }
+.chat::-webkit-scrollbar {
+    width: 0px;               
+} 
 
 .character {
     position: absolute;
